css/main.css
/* ... */
.clients__item:hover {
	opacity:1
}
.work__googleplay-icon {
	width: 45%;
}
.blog__item-link {
	text-decoration: none!important;
	color: #000 !important;
}
.blog__title {
	font-size: 18px;
	margin-top: 20px;
	font-weight: 600;
	transition:all 0.35s ease;
	-webkit-transition:all.35s ease;
}
.blog__description {
	font-size: 14px;
	margin-top: 8px;
	font-weight: 300;
	line-height: 1.6;
	overflow: hidden;
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
}
.blog__details {
	margin-top: 8px;
}
.blog__details i, .blog__details div {
	font-size: 12px !important;
}
.blog__details i::before {
	width: auto;
}
.blog__published-date, .blog__read-duration, .blog__medium-icon {
	font-weight: 300;
	display: inline-block;
	vertical-align: middle;
    color: var(--gray);
}
.blog__medium-icon {
	width: 14px;
	height: 14px;
	margin-left: 4px;
	background-image:url(../img/medium.png);
	background-size: cover;
}
.blog__image-container {
	display: block;
	position: relative;
	width: 100%;
	margin-top: 5px;
    border-radius: 10px;
	padding-top: 56%;
}
.blog__cover-image {
	position: absolute;
	height: 100%;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	object-fit: contain;
}
.podcast, .blog {
	display: block;
	margin-left: -24px;
	margin-right: -24px;
	padding-left: 14px;
    padding-right: 14px;
	white-space: nowrap;
	overflow-x: scroll;
	-webkit-overflow-scrolling: touch;
}
.podcast__item, .blog__item {
	display: inline-block;
	white-space: normal;
	flex: 0 0 85%;
	width: 85%;
	padding-left: 10px;
	padding-right: 10px;
	vertical-align: top;
}
.podcast__cover-image, .blog__cover-image {
	width: 100%;
	border-radius: 10px;
	box-shadow: 0 4px 15px 0 rgba(0,0,0,0.08);
}
.testimonial .icon-quote {
	display:block;
	margin-bottom:16px
}
@media (min-width: 768px) {
	.clients__item {
		margin-left:50px
	}
	.testimonial .icon-quote {
		margin-bottom:24px
	}
	.img-clip-left-backward {
		-webkit-clip-path:polygon(0 0,
		100% 0,
		100% 100%,
		14% 100%);
		clip-path:polygon(0 0,
		100% 0,
		100% 100%,
		14% 100%)
	}
	.podcast, .blog	 {
		overflow-x: hidden;
	}
	.blog__title {
		font-size: 18px;
	}
.blog__details i, .blog__details div {
	font-size: 12px !important;
}
}
.testimonial__author {
	display:-webkit-box;
	display:flex;
	-webkit-box-pack:start;
	justify-content:flex-start;
	-webkit-box-align:center;
	align-items:center
}
.testimonial__author-info,
html body {
	display:-webkit-box;
	-webkit-box-orient:vertical;
	-webkit-box-direction:normal
}
.testimonial__author-image {
	margin-right:16px;
	width:52px;
	height:52px;
	border-radius:100%
}
.testimonial__author-info {
	display:flex;
	flex-direction:column;
	-webkit-box-pack:center;
	justify-content:center;
	-webkit-box-align:start;
	align-items:flex-start
}
.testimonial__author-info h4 {
	font-size:16px;
	margin-bottom:0
}
.testimonial__author-info span {
	font-size:14px;
	font-weight:700;
	color:#e93e34
}
html {
	height:100%;
	overflow-x:hidden
}
html body {
	display:flex;
	flex-direction:column;
	overflow:hidden;
	color:#000;
	letter-spacing:-.2px;
	font-family:Inter,
	-apple-system,
	BlinkMacSystemFont,
	'Segoe UI',
	Roboto,
	'Helvetica Neue',
	Arial,
	'Noto Sans',
	sans-serif,
	'Apple Color Emoji',
	'Segoe UI Emoji',
	'Segoe UI Symbol',
	'Noto Color Emoji'
}
html body::-moz-selection {
	background-color:#e93e34;
	color:#fff
}
html body::selection {
	background-color:#e93e34;
	color:#fff
}
input[type=text]:focus,
input[type=email]:focus,
input[type=password]:focus,
textarea:focus {
	outline:0
}
.section {
	position:relative;
	padding-top:60px;
	padding-bottom:60px
}
.section--border-bottom::after {
	content:'';
	position:absolute;
	left:50%;
	bottom:0;
	width:100%;
	height:1px;
	max-width:1170px;
	background-color:#dbe0e4;
	-webkit-transform:translateX(-50%);
	transform:translateX(-50%)
}
.section .row.row--half-padded {
	padding-top:16px;
	margin-bottom:60px
}
.section .row.row--padded {
	margin-top:32px;
	margin-bottom:60px
}
@media (min-width: 1200px) {
	.section div[class*=col-].rad-col-text:first-child {
		max-width:500px;
		margin-right:auto
	}
	.section div[class*=col-].rad-col-text:not(:first-child) {
		max-width:500px;
		margin-left:auto
	}
}
.section div[class*=col-].rad-col-text h2 {
	text-align:center
}
@media (min-width: 992px) {
	.section {
		padding-top:80px;
		padding-bottom:80px
	}
	.section .row.row--padded {
		margin-top:80px;
		margin-bottom:80px
	}
	.section .row.row--half-padded {
		padding-top:32px;
		margin-bottom:80px
	}
	.section div[class*=col-].rad-col-text h2 {
		text-align:left
	}
}
.section div[class*=col-].rad-col-text p {
	text-align:center
}
.section div[class*=col-] img {
	max-width:100%
}
.section div[class*=col-] img.image-left-overflow {
	margin-left:0
}
@media (min-width: 768px) {
	.img-clip-left-forward {
		-webkit-clip-path:polygon(14% 0,
		100% 0,
		100% 100%,
		0 100%);
		clip-path:polygon(14% 0,
		100% 0,
		100% 100%,
		0 100%)
	}
	.img-clip-right-backward {
		-webkit-clip-path:polygon(0 0,
		86% 0,
		100% 100%,
		0 100%);
		clip-path:polygon(0 0,
		86% 0,
		100% 100%,
		0 100%)
	}
	.img-clip-right-forward {
		-webkit-clip-path:polygon(0 0,
		100% 0,
		86% 100%,
		0 100%);
		clip-path:polygon(0 0,
		100% 0,
		86% 100%,
		0 100%)
	}
	.section div[class*=col-] img.image-left-overflow {
		margin-left:-50px
	}
	.section div[class*=col-] img.image-right-overflow, .section div[class*=col-] img.image-right-overflow + p {
		margin-right:-150px
	}
}
.section--cta {
	padding-top:80px;
	padding-bottom:80px;
	background-color:#000;
	color:#fff
}
.section--cta .h2,
.section--cta h2 {
	color:#fff
}
.section--contact {
	padding-bottom:0;
	background-image:url(../img/contact-bg.png);
	background-repeat:repeat-x;
	background-position:0 100%
}
.section--contact .container {
	background-color:#fff;
	box-shadow:0 42px 34px -16px rgba(0,
	0,
	0,
	.3)
}
/* ... */

